# ninja_passwd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
ninja_passwd/: __init__.py
ninja_passwd/functions/: gnrtr.py
tests/: __init__.py  test_functions.py
